Added and tested research agent and planning agent

--- a/experiments/pranav/agent/agent.ipynb
+++ b/experiments/pranav/agent/agent.ipynb
@@ -7291,6 +7291,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel\n",
+    "from typing import Optional, List\n",
+    "from datetime import datetime\n",
+    "\n",
+    "import os\n",
+    "import httpx\n",
+    "from dotenv import load_dotenv\n",
+    "from fastapi import HTTPException\n",
+    "from fastapi.encoders import jsonable_encoder\n",
+    "\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "API_KEY = os.getenv(\"HEVY_API_KEY\")\n",
+    "if not API_KEY:\n",
+    "    raise Exception(\"HEVY_API_KEY environment variable not set\")\n",
+    "\n",
+    "HEADERS = {\n",
+    "    \"api-key\": API_KEY,\n",
+    "    \"accept\": \"application/json\",\n",
+    "    \"Content-Type\": \"application/json\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# === Workout GET requests ===\n",
+    "\n",
+    "async def get_workouts(page: int = 1, pageSize: int = 5):\n",
+    "    url = \"https://api.hevyapp.com/v1/workouts\"\n",
+    "    params = {\"page\": page, \"pageSize\": pageSize}\n",
+    "    \n",
+    "    async with httpx.AsyncClient() as client:\n",
+    "        response = await client.get(url, headers=HEADERS, params=params)\n",
+    "\n",
+    "    if response.status_code != 200:\n",
+    "        raise HTTPException(status_code=response.status_code, detail=\"Error fetching workouts\")\n",
+    "    \n",
+    "    return response.json()\n",
+    "\n",
+    "\n",
+    "async def get_workout_count():\n",
+    "    url = \"https://api.hevyapp.com/v1/workouts/count\"\n",
+    "    \n",
+    "    async with httpx.AsyncClient() as client:\n",
+    "        response = await client.get(url, headers=HEADERS)\n",
+    "    \n",
+    "    if response.status_code != 200:\n",
+    "        raise HTTPException(status_code=response.status_code, detail=\"Error fetching workout count\")\n",
+    "    \n",
+    "    return response.json()\n",
+    "\n",
+    "\n",
+    "async def get_workout(workout_id: str):\n",
+    "    url = f\"https://api.hevyapp.com/v1/workouts/{workout_id}\"\n",
+    "    \n",
+    "    async with httpx.AsyncClient() as client:\n",
+    "        response = await client.get(url, headers=HEADERS)\n",
+    "    \n",
+    "    if response.status_code != 200:\n",
+    "        raise HTTPException(status_code=response.status_code, detail=\"Error fetching workout by ID\")\n",
+    "    \n",
+    "    return response.json()\n",
+    "\n",
+    "\n",
+    "# === Routine GET ===\n",
+    "\n",
+    "async def get_routines(page: int = 1, pageSize: int = 5):\n",
+    "    url = \"https://api.hevyapp.com/v1/routines\"\n",
+    "    params = {\"page\": page, \"pageSize\": pageSize}\n",
+    "    \n",
+    "    async with httpx.AsyncClient() as client:\n",
+    "        response = await client.get(url, headers=HEADERS, params=params)\n",
+    "    \n",
+    "    if response.status_code != 200:\n",
+    "        raise HTTPException(status_code=response.status_code, detail=\"Error fetching routines\")\n",
+    "    \n",
+    "    return response.json()\n",
+    "\n",
+    "\n",
+    "\n",
+    "async def tool_fetch_workouts(page: int = 1, page_size: int = 5):\n",
+    "    \"\"\"\n",
+    "    Tool to fetch user's workout logs.\n",
+    "    \"\"\"\n",
+    "    return await get_workouts(page=page, pageSize=page_size)\n",
+    "\n",
+    "\n",
+    "async def tool_get_workout_count():\n",
+    "    \"\"\"\n",
+    "    Tool to retrieve the user's workout count.\n",
+    "    \"\"\"\n",
+    "    return await get_workout_count()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "\n",
+    "async def main():\n",
+    "    workouts = await tool_fetch_workouts.ainvoke({\"page\": 1, \"page_size\": 3})\n",
+    "    print(\"Workouts:\", workouts)\n",
+    "\n",
+    "    count = await tool_get_workout_count.ainvoke({})\n",
+    "    print(\"Workout Count:\", count)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'ainvoke'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m main()\n",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m----> 5\u001b[0m     workouts \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[43mtool_fetch_workouts\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mainvoke\u001b[49m({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpage\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpage_size\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m3\u001b[39m})\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWorkouts:\u001b[39m\u001b[38;5;124m\"\u001b[39m, workouts)\n\u001b[1;32m      8\u001b[0m     count \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m tool_get_workout_count\u001b[38;5;241m.\u001b[39mainvoke({})\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'ainvoke'"
+     ]
+    }
+   ],
+   "source": [
+    "await main()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
